--- a/svelte-frontend/src/app.postcss
+++ b/svelte-frontend/src/app.postcss
@@ -1,5 +1,19 @@
-/*place global styles here */
 html,
 body {
 	@apply h-full overflow-hidden;
+}
+.gradient-heading {
+	@apply bg-clip-text text-transparent box-decoration-clone;
+	@apply bg-gradient-to-br;
+	@apply from-primary-500 via-tertiary-500 to-secondary-500;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('/fonts/Montserrat-Italic-VariableFont_wght.ttf');
+}
+
+body {
+	font-family: Arial, 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
